Remove restriction of CarpetRules being Comparable
And fix overreaction in a deprecation message